--- a/app/modules/manager/views/scripts/counseling-structure/edit-line-info.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/edit-line-info.ajax.phtml
@@ -54,14 +54,13 @@ else:
         </tr>
         <tr>
             <td>
-                <strong>Наименование:</strong><br/>
-                <?=$data->get('name')?>
+                <strong>Наименование:</strong> &laquo;<?=$data->get('name')?>&raquo;
             </td>
         </tr>
         <tr>
             <td>
                 <strong>Описание:</strong><br/>
-                <?=$data->get('description')?>
+                <em><?=$data->get('description')?></em>
             </td>
         </tr>
     </tbody>
