--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -34,7 +34,7 @@
 <body class="hm" style="position: relative">
 <div id="loader" class="hidden"><span>Загрузка и обработка данных ... </span></div>
 <div id="header">
-    <div style="background: #F5FAFF">
+    <div style="background: #F5FAFF; border-bottom: 3px solid #666;">
         <div class="container" style="position: relative; padding: 10px 0">
             <h1>
                 <a href="<?php echo $this->baseUrl(); ?>">
@@ -53,9 +53,9 @@
                     <tr>
                         <td>
                             <?php if(is_string($user->getData('logo'))) :?>
-                            <img width="60" height="78" style="width: 60px; height: 78px" src="data:image/png;base64,<?=$user->getData('logo')?>">
+                            <img width="60" height="78" style="width: 60px; height: 78px; border: 1px solid #C7CED6" src="data:image/png;base64,<?=$user->getData('logo')?>">
                             <?php else: ?>
-                            <img width="60" height="78" style="width: 60px; height: 78px; border: 2px solid #999" src="<?=$this->baseUrl('theme/default/images/not_image.png')?>">
+                            <img width="60" height="78" style="width: 60px; height: 78px; border: 1px solid #C7CED6" src="<?=$this->baseUrl('theme/default/images/not_image.png')?>">
                             <?php endif; ?>
                         </td>
                         <td>
