--- a/app/modules/default/views/scripts/index/index.phtml
+++ b/app/modules/default/views/scripts/index/index.phtml
@@ -53,5 +53,4 @@ dojo.ready(function(){
 JS;
 $this->headScript()->appendScript($jScript, $type = 'text/javascript')
 ?>
-<button id="test" type="button" data-testme="hello">Click</button>
-<span class="testing">asdasdas</span><div id="content"></div>
+<p>Добро пожаловать в систему online помощи - &laquo;Helpme&raquo;</p>
